# Gauss-Legendre-Spherical-t

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: atom_packet.hcu  cell_decomp.hpp  cubature.hcu  cuda_container.hcu  cuda_utils.hcu  device_comm.hcu  device_vector.hcu  error_utils.hpp  glst_force.hcu  glst_plan.hcu  glst_workspace.hcu  reduce.hcu  string_utils.hpp
src/: CMakeLists.txt  cubature.cu  cuda_container.cu  cuda_utils.cu  device_comm.cu  device_vector.cu  error_utils.cpp  glst_force.cu  glst_plan.cu  glst_workspace.cu  string_utils.cpp
test/: CMakeLists.txt  assign_atoms_hybrid.cu  atom_storage_capacity.cu  calc_sf_hybrid.cu  cell_mapping_hybrid.cu  full_example.cu  global_atom_reference.cu  global_atom_scatter.cu  hybrid_layout_correctness.cu  reduce_tile_partition_ef.cu  setup_plan.cu  short_range_halo_exchange.cu  short_range_halo_plan.cu
utils/: CMakeLists.txt  coulomb.cu  coulomb.hcu  io.cpp  io.hpp  parse_glst_results.py  utils.cpp  utils.hpp
